12-k8s-2.3/yaml/1-task.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm-deployment
  labels:
    app: cm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cm-deployment
  template:
    metadata:
      labels:
        app: cm-deployment
    spec:
      containers:
        - name: busybox
          image: busybox
          command: ['sh', "-c", "sleep 36000"]
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
        - name: multitool
          image: wbitt/network-multitool
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: nginx
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
      - name: nginx
        configMap:
          name: nginx-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: cm-deployment-svc
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
  selector:
    app: cm-deployment
