12-k8s-2.3/yaml/2-task.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-nginx
  labels:
    app: custom-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-nginx
  template:
    metadata:
      labels:
        app: custom-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: nginx
          ports:
          - containerPort: 80
            name: custom-nginx
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
      - name: nginx
        configMap:
          name: nginx-configmap-task2
---
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx
spec:
  selector:
    app: custom-nginx
  ports:
    - name: custom-nginx
      port: 80
      targetPort: custom-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-nginx-ing
spec:
  tls:
  - hosts:
    - "netology-task2"
    secretName: root-secret
  rules:
  - host: "netology-task2"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: custom-nginx
            port: 
              number: 80
